# YueQian-phase2-project1

./: README.md  hello.c
project/lv_port_linux_frame_buffer-release-v8.2/: 1sys  Makefile  demo  example.txt  lv_conf.h  main.c
project/lv_port_linux_frame_buffer-release-v8.2/inc/: client.h  color.h  connect.h  keyboard.h  login_register.h  show_something_demo.h  weather.h
project/lv_port_linux_frame_buffer-release-v8.2/lib/: config.txt
project/lv_port_linux_frame_buffer-release-v8.2/lvgl/: CMakeLists.txt
project/lv_port_linux_frame_buffer-release-v8.2/lvgl/src/extra/libs/freetype/: lv_freetype.c
project/lv_port_linux_frame_buffer-release-v8.2/my_lvgl_test/: show_something_demo.c
project/lv_port_linux_frame_buffer-release-v8.2/src/: connect.c  lv_font_SiYuanRouHei_Regular_16_cjk.c  show_something_demo.c  source_han_sans_cn_normal_24.c
project/lv_port_linux_frame_buffer-release-v8.2/src/index_register_login/: boot_anim.c  index.c  login.c  login_register.c  register.c
project/lv_port_linux_frame_buffer-release-v8.2/src/keyboard/: keyboard.c
project/lv_port_linux_frame_buffer-release-v8.2/src/sys_main_page/: local_upload.c  sys_main_page.c  weather.c  web_disk.c
project/sever/: 1sever  Makefile  account.c  cJSON.c  client_handler.c  file_handler.c  log_handler.c  main.c  main.h  server_log.txt  task_queue.c  weather.c
project/sever/user_information/: user_credentials.txt
project/sever/web_disk/: server_log.txt
